# katsustats

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  example_report.html  generate_example.py  pyproject.toml  report.html
.claude/commands/: release.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/skills/code-simplify/: SKILL.md
.github/skills/make-skill-template/: SKILL.md
.github/skills/publish/: SKILL.md
.github/workflows/: codeql.yml  publish.yml  release-binaries.yml
examples/: html_report.py  quickstart.py  with_benchmark.py
examples/reports/: btc_eth_report.html  btc_eth_report.json  btc_eth_report.md
src/katsustats/: __init__.py  __main__.py  _constants.py  _dataframe.py  plots.py  reports.py  stats.py
tests/: conftest.py  test_cli.py  test_dataframe.py  test_plots.py  test_reports.py  test_stats.py
